@@ -130,3 +130,7 @@ added parity.diagnostic, which in fact is a micro-debugger, which can start a pr
 the default parity.conf now sets the WIN32_LEAN_AND_MEAN define.
 
 made the dlopen function a little more intelligent, making it now search for .dll files too.
+
+corrected the expansion of define values given on the command line, so that the percent character ("%") is escaped correctly before beeing passed to cl.exe.
+
+corrected code that reads environment variables in the loader to ignore variables that are set but empty.
